--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,10 +110,10 @@ services:
       redis:
         condition: service_healthy
   
-  celery-exporter:
+  celery_exporter:
     image: danihodovic/celery-exporter
     platform: linux/amd64
-    container_name: celery-exporter
+    container_name: celery_exporter
     command: --broker-url=${CELERY_BROKER_URL}
     ports:
       - "9808:9808"
@@ -122,11 +122,22 @@ services:
     depends_on:
       - redis
     healthcheck:
-      test: ["CMD", "python3", "-c", "import urllib.request; urllib.request.urlopen('http://celery-exporter:9808/metrics')"]
+      test: ["CMD", "python3", "-c", "import urllib.request; urllib.request.urlopen('http://celery_exporter:9808/metrics')"]
       interval: 3s
       timeout: 3s
       retries: 5
       start_period: 10s  
+  
+  celery_beat:
+    <<: *django_base
+    image: iot-hub-beat
+    container_name: celery_beat
+    command: [ "celery", "-A", "conf.celery_app", "beat", "-l", "INFO", "--scheduler", "django_celery_beat.schedulers:DatabaseScheduler" ]
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
 
   prometheus:
     image: prom/prometheus
@@ -138,7 +149,7 @@ services:
     networks:
       - backend
     depends_on:
-      celery-exporter:
+      celery_exporter:
         condition: service_healthy   
 
   grafana:
