--- a/devops/prometheus.yml
+++ b/devops/prometheus.yml
@@ -19,6 +19,6 @@ scrape_configs:
 
   - job_name: 'worker'
     static_configs:
-      - targets: ['celery-exporter:9808']
+      - targets: ['celery_exporter:9808']
         labels:
           app: 'worker'
