--- a/.env.example
+++ b/.env.example
@@ -212,8 +212,16 @@ MQTT_HOST=mosquitto
 # MQTT broker port (default 1883)
 MQTT_PORT=1883
 
+# MQTT broker authentication
+MQTT_USERNAME=your-mqtt-username
+MQTT_PASSWORD=your-mqtt-password
+
 # MQTT keepalive seconds
 MQTT_KEEPALIVE=60
+
+# MQTT exponential reconnect delay (positive integers)
+MQTT_MIN_RECONNECT_DELAY=1
+MQTT_MAX_RECONNECT_DELAY=120
 
 # Topic to subscribe for telemetry messages
 MQTT_TOPIC=telemetry
